--- a/src/assets/styles/sass/index.scss
+++ b/src/assets/styles/sass/index.scss
@@ -9,6 +9,7 @@
 
 body {
     color: var(--color-white);
+    text-align: justify;
 }
 
 .App {
@@ -24,7 +25,7 @@ body {
 .App>:nth-child(1) {
     grid-area: navbar;
     height: 90px;
-    background-color: var(--color-dark);
+    background-color: var(--color-dark)
 }
 
 .App>:nth-child(2) {
@@ -37,7 +38,7 @@ body {
     grid-area: view;
     min-height: calc(100vh - 200px);
     background-color: var(--color-dark);
-    
+
 }
 
 .App>:nth-child(4) {
@@ -46,27 +47,32 @@ body {
     background-color: var(--color-dark);
     padding: 8px 0px 8px 0px;
 }
-.marketSection{
+
+.marketSection {
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(min(100%, 19rem), 1fr));
     gap: 1rem;
 }
 
-.card{
+.card {
     font-size: 16px;
     font-weight: 300;
-}
+    transition-duration: 0.3s;
+    &:hover{
+        box-shadow: 0px 0px 8px 2px var(--color-light);
+    }
+    .CardImg {
+        height: 250px;
+        zoom: 1.1;
+        object-fit: cover;
+    }
 
-.CardImg{
-    height: 250px;
-    zoom: 1.1;
-    object-fit: cover;
-}
-
-.card-text{
-    height: 100px;
-    object-fit: cover;
-    overflow: hidden;
+    .card-text {
+        height: 100px;
+        object-fit: cover;
+        overflow: hidden;
+    }
+    
 }
 
 h1 {
@@ -93,8 +99,18 @@ h1 {
     width: 400px;
 }
 
-.imgItem{
-    max-width: 500px;
-    zoom: 1.1;
-    object-fit: cover;
+.itemCard {
+    display: grid;
+    grid-template-columns: repeat( auto-fit, minmax(min(100%, 20rem), 1fr));
+    gap:1rem;
+    div{
+        .imgItem{
+            width: 100%;
+
+            zoom: 2;
+            object-fit: contain;
+
+            
+        }
+    }
 }
