--- a/src/assets/styles/sass/index.scss
+++ b/src/assets/styles/sass/index.scss
@@ -58,9 +58,11 @@ body {
     font-size: 16px;
     font-weight: 300;
     transition-duration: 0.3s;
-    &:hover{
+
+    &:hover {
         box-shadow: 0px 0px 8px 2px var(--color-light);
     }
+
     .CardImg {
         height: 250px;
         zoom: 1.1;
@@ -72,7 +74,7 @@ body {
         object-fit: cover;
         overflow: hidden;
     }
-    
+
 }
 
 h1 {
@@ -101,16 +103,30 @@ h1 {
 
 .itemCard {
     display: grid;
-    grid-template-columns: repeat( auto-fit, minmax(min(100%, 20rem), 1fr));
-    gap:1rem;
-    div{
-        .imgItem{
+    grid-template-columns: repeat(auto-fit, minmax(min(100%, 20rem), 1fr));
+    gap: 1rem;
+
+    div {
+        .imgItem {
             width: 100%;
 
             zoom: 2;
             object-fit: contain;
 
-            
+
         }
+    }
+}
+
+.cart-list-item {
+    .tr-img {
+        width: 100px;
+    }
+
+    img {
+        zoom: 1;
+        width: 100px;
+        height: 100px;
+        object-fit: cover;
     }
 }
