--- a/src/assets/styles/sass/index.scss
+++ b/src/assets/styles/sass/index.scss
@@ -24,8 +24,8 @@ body {
 
 .App>:nth-child(1) {
     grid-area: navbar;
-    height: 90px;
-    background-color: var(--color-dark)
+    background-color: var(--color-dark);
+
 }
 
 .App>:nth-child(2) {
@@ -43,9 +43,9 @@ body {
 
 .App>:nth-child(4) {
     grid-area: footer;
-    height: 100px;
+    // height: 100px;
     background-color: var(--color-dark);
-    padding: 8px 0px 8px 0px;
+    padding: 1rem 0px 1rem 0px;
 }
 
 .marketSection {
@@ -95,6 +95,7 @@ h1 {
 
 .Nav {
     max-height: 400px;
+    font-size: 1.5rem;
 }
 
 .logo {
@@ -111,9 +112,7 @@ h1 {
     gap: 1rem;
 
     div {
-        .imgItem {
-            width: 100%;
-
+        .img-item {
             zoom: 2;
             object-fit: contain;
 
@@ -132,5 +131,26 @@ h1 {
         width: 100px;
         height: 100px;
         object-fit: cover;
+    }
+}
+
+.ico-email {
+    font-size: 3rem;
+}
+
+.social-ico-div {
+    >p {
+        font-size: 2rem;
+    }
+}
+
+.about-page {
+    div {
+        max-width: 800px;
+
+        .about-img-div {
+            max-width: 500px;
+        }
+
     }
 }
