--- a/src/assets/styles/css/index.css
+++ b/src/assets/styles/css/index.css
@@ -42,6 +42,11 @@ body {
   padding: 1rem 0px 1rem 0px;
 }
 
+a {
+  color: var(--color-white);
+  text-decoration: none;
+}
+
 .marketSection {
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(min(100%, 12rem), 1fr));
@@ -52,6 +57,7 @@ body {
   font-size: 16px;
   font-weight: 300;
   transition-duration: 0.3s;
+  background-color: var(--color-primary);
 }
 .card:hover {
   box-shadow: 0px 0px 8px 2px var(--color-light);
@@ -60,9 +66,11 @@ body {
   height: 200px;
   zoom: 1.1;
   object-fit: cover;
+  background-color: var(--color-white);
 }
 .card .card-body {
-  min-height: 150px;
+  min-height: 120px;
+  overflow: hidden;
 }
 .card .card-text {
   height: 100px;
@@ -76,6 +84,11 @@ h1 {
 
 .divNav2 {
   background-color: var(--color-dark);
+  transition-duration: 0.2s;
+}
+.divNav2:hover {
+  box-shadow: 0px 0px 4px 0.5px var(--color-light);
+  cursor: pointer;
 }
 
 .InputGroup {
@@ -99,12 +112,16 @@ h1 {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(min(100%, 20rem), 1fr));
   gap: 1rem;
+  background-color: var(--color-primary);
 }
 .itemCard div .img-item {
   zoom: 2;
-  object-fit: contain;
 }
 
+.cart-list-item {
+  background-color: var(--color-primary);
+  border-radius: 4px;
+}
 .cart-list-item .tr-img {
   width: 100px;
 }
@@ -128,6 +145,28 @@ h1 {
 }
 .about-page div .about-img-div {
   max-width: 500px;
+}
+
+.animation-zoom {
+  transition-duration: 0.2s;
+}
+.animation-zoom:hover {
+  transform: scale(1.2);
+  color: var(--color-light);
+  z-index: 1111;
+}
+
+.animation-zoom-card {
+  transition-duration: 0.2s;
+}
+.animation-zoom-card:hover {
+  transform: scale(1.05);
+  color: var(--color-light);
+  z-index: 1111;
+}
+
+.cart-count {
+  transform: scale(0.5) !important;
 }
 
 /*# sourceMappingURL=index.css.map */
